# ChessEngine

./: CMakeLists.txt  CMakeSettings.json  README.md
Colab/: ChessEngineCUDA.ipynb
engine/: batch_eval.cpp  batch_eval.hpp  bitboards.cpp  bitboards.hpp  board.cpp  board.hpp  evaluation.cpp  evaluation.hpp  experience.cpp  experience.hpp  fen.cpp  fen.hpp  magics.cpp  magics.hpp  mcts.cpp  mcts.hpp  movegen.cpp  movegen.hpp  moveorderer.cpp  moveorderer.hpp  nnue.cpp  nnue.hpp  nnue_cuda.cu  nnue_cuda.hpp  nnue_weights_generated.hpp  pst_tables.hpp  san.cpp  san.hpp  search.cpp  tt.cpp  tt.hpp  typedefs.hpp  uci.cpp  utils.cpp  utils.hpp  zobrist.cpp  zobrist.hpp
